# mousehunter_hailo_v2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.pi.txt  requirements.txt  test_hailo_lazy_init.py  test_hailo_main_vs_worker.py  test_hailo_minimal.py  test_hailo_reuse.py  test_hailo_simple.py  test_hailo_threading.py  test_hardware.py  test_live_detection.py  test_video_diagnosis.py  test_video_inference.py
config/: config.json
docs/: UPDATE_LOG_20260128.md  UPDATE_LOG_20260130.md  UPDATE_LOG_20260201.md  UPDATE_LOG_20260217.md  UPDATE_LOG_20260218.md  UPDATE_LOG_20260219.md  UPDATE_LOG_20260221.md  UPDATE_LOG_20260222.md
scripts/: test_evidence_pipeline.py
sounds/: README.txt
src/mousehunter/: __init__.py  config.py  main.py
src/mousehunter/api/: __init__.py  server.py
src/mousehunter/camera/: __init__.py  camera_service.py  circular_buffer.py  frame_annotator.py  video_encoder.py
src/mousehunter/hardware/: __init__.py  audio.py  jammer.py
src/mousehunter/inference/: __init__.py  detection.py  hailo_engine.py  prey_detector.py
src/mousehunter/notifications/: __init__.py  telegram_bot.py
src/mousehunter/storage/: __init__.py  cloud_storage.py  training_data.py
systemd/: mousehunter.service
tests/: __init__.py  conftest.py  test_detection.py  test_hailo_engine.py  test_prey_detector.py
